updated availability selection logic and timeslot deletion logic via caldav
